test/expected/explain_efd.out
explain enum E : double x
                 ^
18: error: invalid enum underlying type "double"; must be integral
